--- a/browser/canvas.html
+++ b/browser/canvas.html
@@ -13,7 +13,7 @@
     window.onload = function () {
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext("2d");
-		
+		/*
 		ctx.lineWidth = 2;
 
 		ctx.fillStyle = "orange";
@@ -58,24 +58,23 @@
 		ctx.restore();
 
 		//ctx.strokeStyle = "black";
-		
+		*/
 		const image = drawie.image(ctx);
 			
 		const ln = line(p(100, 200), p(300, 400), { color: "red" });
 		
 		ln.draw(image);
 		
-		const d = drawie.composite([], { color: "yellow" });
+		const d = drawie.composite([], { color: "orange" });
 		
 		const ln2 = line(p(0, 0), p(100, 0));
 		
 		for (let k = 0; k <= 180; k += 10)
 			d.add(ln2.rotate(k));
 		
-		d.draw(image);			
+		d.draw(image);
 		d.translate(p(200, 200)).draw(image);
 		d.translate(p(300, 300)).draw(image);		
-		d.style.color = "orange";
 		d.rotate(90).translate(p(100, 100)).draw(image);
 
 		const t = drawie.triangle(p(300, 100), p(400, 200), p(400, 100), { fillColor: "red" });
@@ -117,15 +116,15 @@
 		spiral = spiral.translate(p(200, 200));
 		
 		spiral.draw(image);
-		
-		const segment = line(p(100, 0), p(200,0));
+	
+		const segment = line(p(100, 0), p(200,0), { color: "green" });
 		
         let rep = drawie.repeat(
 			function (element) { return element.rotate(10); },
-			segment, 20, { color: "blue" });
+			segment, 20);
 		rep = rep.translate(p(250, 150));
 		rep.draw(image);
-
+  
 		let wave = drawie.xfunction(
 			function (x) { return Math.sin(x) / Math.exp(x/10*x/10); },
 			-Math.PI*10, Math.PI*10, Math.PI/360, { color: "red" });
