--- a/browser/canvas.html
+++ b/browser/canvas.html
@@ -59,7 +59,7 @@
 
 		//ctx.strokeStyle = "black";
 		*/
-		const image = drawie.image(ctx);
+		const image = drawie.image(ctx, canvas.width / 2, canvas.height / 2);
 			
 		const ln = line(p(100, 200), p(300, 400), { color: "red" });
 		
@@ -81,22 +81,22 @@
 		t.draw(image);
 		
 		let s = drawie.sine(0, Math.PI*20, Math.PI/360, { color: "green" });
-		s = s.verticalResize(10);
-		s = s.horizontalResize(3);
+		s = s.vresize(10);
+		s = s.hresize(3);
 		s = s.translate(p(100, 100));
 		
 		s.draw(image);
 
 		let c = drawie.cosine(0, Math.PI*20, Math.PI/360, { color: "red", lineWidth: 3 });
-		c = c.verticalResize(10);
-		c = c.horizontalResize(3);
+		c = c.vresize(10);
+		c = c.hresize(3);
 		c = c.translate(p(100, 100));
 		
 		c.draw(image);
 
 		let f = drawie.yfunction(Math.sin, 0, Math.PI*20, Math.PI/360, { color: "blue" });
-		f = f.verticalResize(3);
-		f = f.horizontalResize(10);
+		f = f.vresize(3);
+		f = f.hresize(10);
 		f = f.translate(p(100, 200));
 		
 		f.draw(image);
@@ -128,8 +128,8 @@
 		let wave = drawie.xfunction(
 			function (x) { return Math.sin(x) / Math.exp(x/10*x/10); },
 			-Math.PI*10, Math.PI*10, Math.PI/360, { color: "red" });
-		wave = wave.verticalResize(20);
-		wave = wave.horizontalResize(3);
+		wave = wave.vresize(20);
+		wave = wave.hresize(3);
 		wave = wave.translate(p(250, 250));
 		
 		wave.draw(image);
